<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="80dp"
        android:text="count 0"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        tools:layout_editor_absoluteX="113dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="194dp"
        android:layout_height="64dp"
        android:layout_marginBottom="28dp"
        android:text="Count Click"
        app:layout_constraintTop_toBottomOf="@+id/tvMsg"
        app:layout_constraintStart_toStartOf="@+id/tvMsg"
        tools:layout_editor_absoluteX="118dp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="187dp"
        android:layout_height="58dp"
        android:text="Next Activity Click"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="280dp"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="@+id/tvMsg"/>
</androidx.constraintlayout.widget.ConstraintLayout>